--- a/index.html
+++ b/index.html
@@ -351,11 +351,8 @@
         <!-- Content Section -->
         <div class="content">
             <p class="intro-text">
-                I recently had the chance to talk to two powerful creatives- Binna Lee and Jonah King, what started as a 
-                20 minute conversation soon became two hours as we unfolded something much bigger: breaking the 
-                boundaries of technologies and reimagining it through an authentic lens. We unravelled the 
-                exploitations of dominant players in tech and the unnoticed patterns that we all have become a victim 
-                of. As I listened back, I realized—this isn't just one discussion. Each theme we touched on deserves its own exploration.
+               
+I recently had the chance to talk to two powerful creatives- Binna Lee and Jonah King, what started as a 20 minute conversation soon became two hours as we unfolded something much bigger: breaking the boundaries of technologies and reimagining it through an authentic lens. We unravelled the exploitations of dominant players in tech and the unnonticed patterns that we all have become a victim of.  As I listened back, I realized—this isn’t just one discussion. Each theme we touched on deserves its own spotlight. So I broke it down into a series of 4 sub-chapters:  
             </p>
 
             <!-- Sub-chapters -->
