--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <!-- Profile Descriptions -->
         <div class="descriptions">
             <div class="description">
-                Artist, cultural critic and educator exploring human–nonhuman relationships, with work exhibited internationally (New York, Milan, Seoul), Rema Hort Mann Nominee and SXSW XR Official Selection.
+                Artist and cultural critic whose work has been shown internationally (New York, Milan, Seoul). Rema Hort Mann Nominee and SXSW XR Competition Official Selection.
             </div>
             <div style="flex: 1;"></div>
             <div class="description right">
