--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
             </div>
             <div style="flex: 1;"></div>
             <div class="description right">
-                Interaction Designer, and educator exploring design psychology, and human interaction. Shortlisted for the Red Dot Design Award and NYC Media Lab Featured Designer.
+                Designer and educator exploring authenticity in digital systems. Shortlisted for the Red Dot Design Award, Parsons Dean’s Merit Scholar, and NYC Media Lab Featured Designer.
+
             </div>
         </div>
 
