--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             background: black;
             color: #10b981;
-            font-family: 'Courier New', monospace;
+            font-family: 'Open Sans', monospace;
             min-height: 100vh;
             overflow-x: hidden;
             position: relative;
