--- a/index.html
+++ b/index.html
@@ -340,11 +340,11 @@
         <!-- Profile Descriptions -->
         <div class="descriptions">
             <div class="description">
-                Artist and cultural critic whose work has been shown internationally (New York, Milan, Seoul). Rema Hort Mann Nominee and SXSW XR Competition Official Selection.
+                Jonah King: Artist and cultural critic whose work has been shown internationally (New York, Milan, Seoul). Rema Hort Mann Nominee and SXSW XR Competition Official Selection.
             </div>
             <div style="flex: 1;"></div>
             <div class="description right">
-                Designer and educator exploring authenticity in digital systems. Shortlisted for the Red Dot Design Award, Parsons Dean’s Merit Scholar, and NYC Media Lab Featured Designer.
+                Binna Lee: Designer and educator exploring authenticity in digital systems. Shortlisted for the Red Dot Design Award, Parsons Dean’s Merit Scholar, and NYC Media Lab Featured Designer.
 
             </div>
         </div>
